--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello curse</title>
+    <title>Sofi</title>
 </head>
 <body>
-<h1>Bienvenidos</h1> 
+te amo mi vida, perdon por todo, yo quiero estar contigo, siempre, hasta estar seguros de no poder mas, me la juego por vos una y mil veces, sos lo mejor que tengo
+perdon y te pido, vamos a seguir juntos, que nos amamos mas que nada, te amo.
 </body>
 </html>
