--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 SOFI
     
 te amo mi vida, perdon por todo, yo quiero estar contigo, siempre, hasta estar seguros de no poder mas, me la juego por vos una y mil veces, sos lo mejor que tengo
-perdon y te pido, vamos a seguir juntos, que nos amamos mas que nada, te amo.
+perdon y te pido, vamos a seguir juntos, que nos amamos mas que nada, ojalá nuestra historia no termine aca, te amo..
 </body>
 </html>
